--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -1,17 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-body,
-html {
-  width: 100%;
-  height: 100%;
-}
-body {
-  margin: 0;
-  padding: 0;
-  background: #5cdb95;
-  font-family: sans-serif;
-}
 legend,
 label,
 input,
@@ -37,7 +23,7 @@ a {
   top: 0px;
   width: 80px;
   height: 90px;
-  background: #05386b;
+  background: black;
   z-index: 100;
   display: flex;
   justify-content: center;
@@ -47,8 +33,8 @@ a {
 }
 .logo {
   font-size: 3rem;
-  font-family: sans-serif;
-  color: #edf5e1;
+  font-weight: 500;
+  color: black;
   padding-top: 1rem;
   margin-left: 1rem;
   font-size: 2.5rem;
@@ -62,7 +48,7 @@ a {
 .menu-toggler-line {
   width: 60%;
   height: 3px;
-  background: #edf5e1;
+  background: white;
   margin: 0 0 10px 0px;
   position: relative;
   transition: all 0.4s ease-out;
@@ -132,7 +118,7 @@ a {
 .menu-link:hover,
 .menu-link:focus,
 .menu-link:active {
-  color: #05386b;
+  color: #ffdf6c;
 }
 
 .input-toggler:checked ~ .sidebar {
