--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -1,19 +1,98 @@
-* {
-  box-sizing: border-box;
-}
-body,
-html {
-  width: 100%;
-  height: 100%;
-}
 body {
   margin: 0;
   padding: 0;
   background: white;
+  overflow: hidden;
+}
+.container {
+  height: 50px;
+  display: flex;
+  justify-content: space-between;
+  padding: 7rem 3rem;
+  box-sizing: border-box;
+}
+.img-body {
+  box-sizing: border-box;
+  height: 700px;
+}
+.img-fluid {
+  width: 100%;
+}
+.body-text {
+  height: 100px;
+  width: 100%;
+  box-sizing: border-box;
+}
+.name-text,
+.field {
+  white-space: nowrap;
+  overflow: hidden;
 }
 
-.img-fluid {
-  max-width: 100%;
-  height: 400px;
-  margin-left: 20px;
+.name-text {
+  border-right: 2px solid rgb(255, 223, 108);
+  animation: animated-text__1 4s steps(30, end) 1s 1 normal both,
+    animated-cursor__1 900ms steps(30, end);
+}
+.field {
+  border-right: 2px solid white;
+  animation: animated-text__2 4s steps(30, end) 1s 1 normal both,
+    animated-cursor__2 900ms steps(30, end) infinite;
+  -webkit-animation-delay: 5s;
+  animation-delay: 5s;
+}
+
+@keyframes animated-cursor__1 {
+  from {
+    border-right-color: rgb(255, 223, 108);
+  }
+  to {
+    border-right-color: white;
+  }
+}
+
+@keyframes animated-cursor__2 {
+  from {
+    border-right-color: white;
+  }
+  to {
+    border-right-color: rgb(255, 223, 108);
+  }
+}
+
+@keyframes animated-text__1 {
+  from {
+    width: 0;
+  }
+  to {
+    width: 31rem;
+    border-right-color: white;
+  }
+}
+
+@keyframes animated-text__2 {
+  from {
+    width: 0;
+  }
+  to {
+    width: 8.3rem;
+  }
+}
+
+.greetings {
+  color: #707070;
+  display: block;
+  font-size: 2rem;
+}
+.name-text {
+  color: #202020;
+  display: block;
+  font-size: 2.3rem;
+  padding: 0.5rem 0rem;
+  font-weight: 600;
+}
+.field {
+  color: #3f3f3f;
+  display: block;
+  font-size: 1rem;
 }
