--- a/src/Styles/About.css
+++ b/src/Styles/About.css
@@ -30,7 +30,29 @@
 .about-fluid {
   width: 100%;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 376px) {
+  .container-about {
+    display: flex;
+    flex-direction: column;
+    padding: 2rem 0.5rem;
+  }
+  .txt-1 {
+    font-size: 1.9rem;
+  }
+  .txt-2 {
+    font-size: 1.9rem;
+  }
+  .about-text {
+    font-size: 0.9rem;
+    width: 8rem;
+  }
+  .about-fluid {
+    padding: 0rem 0rem;
+    height: auto;
+    width: 100%;
+  }
+}
+@media screen and (min-width: 377px) and (max-width: 768px) {
   .container-about {
     display: flex;
     flex-direction: column;
