--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -97,7 +97,7 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-
+  z-index: 30;
   transform: translateX(-100%);
 
   transition: all 0.4s ease-out;
