--- a/src/Styles/Projects.css
+++ b/src/Styles/Projects.css
@@ -8,6 +8,7 @@
   justify-content: center;
   flex-direction: row;
   flex-wrap: wrap;
+  /* height: 1080px; */
 }
 .prj-1 {
   margin-top: 4rem;
@@ -30,7 +31,7 @@
   transition: all 0.3s ease-out;
 }
 .cd:not(:first-child) {
-  margin-left: -40px;
+  /* margin-left: -40px; */
 }
 
 .cd:hover {
