--- a/src/Styles/Project.css
+++ b/src/Styles/Project.css
@@ -1,14 +1,21 @@
 .main {
+  padding: 5rem;
   max-width: 1200px;
   margin: 0 auto;
+  overflow: hidden;
 }
 
 h1 {
-  font-size: 24px;
-  font-weight: 400;
+  font-size: 3rem;
+  font-weight: 300;
   text-align: center;
 }
-
+h1 .yellow {
+  padding-left: 1rem;
+  color: #ffdf6c;
+  font-weight: 800;
+  font-size: 3rem;
+}
 img {
   height: auto;
   max-width: 100%;
@@ -16,7 +23,7 @@ img {
 }
 
 .btn {
-  color: #ffffff;
+  color: black;
   padding: 0.8rem;
   font-size: 14px;
   text-transform: uppercase;
@@ -25,12 +32,12 @@ img {
   display: block;
   width: 100%;
   cursor: pointer;
-  border: 1px solid rgba(255, 255, 255, 0.2);
+  border: 1px solid rgba(61, 60, 60, 0.2);
   background: transparent;
 }
 
 .btn:hover {
-  background-color: rgba(255, 255, 255, 0.12);
+  background-color: rgba(61, 60, 60, 0.2);
 }
 
 .cards {
@@ -38,23 +45,38 @@ img {
   flex-wrap: wrap;
   list-style: none;
   margin: 0;
-  padding: 0;
 }
 
 .cards_item {
   display: flex;
   padding: 1rem;
+  width: 33.3333%;
 }
 
-@media (min-width: 40rem) {
+@media screen and (max-width: 768px) {
+  .main {
+    margin-top: 2rem;
+    padding: 2rem;
+  }
   .cards_item {
-    width: 50%;
+    width: 100%;
+  }
+  h1 {
+    font-size: 2rem;
+  }
+  h1 .yellow {
+    padding-left: 1rem;
+    font-size: 2rem;
   }
 }
 
-@media (min-width: 56rem) {
+@media screen and (min-width: 769px) and (max-width: 1068px) {
+  .main {
+    padding: 5rem 2rem;
+  }
   .cards_item {
-    width: 33.3333%;
+    margin-left: 2rem;
+    width: 43.5%;
   }
 }
 
@@ -64,16 +86,17 @@ img {
   box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
   display: flex;
   flex-direction: column;
-  overflow: hidden;
 }
 
 .card_content {
+  height: 100%;
   padding: 1rem;
-  background: linear-gradient(to bottom left, #ef8d9c 40%, #ffc39e 100%);
+  background-color: #d9e4f5;
+  background-image: linear-gradient(315deg, #d9e4f5 0%, #f5e3e6 74%);
 }
 
 .card_title {
-  color: #ffffff;
+  color: black;
   font-size: 1.1rem;
   font-weight: 700;
   letter-spacing: 1px;
@@ -82,15 +105,9 @@ img {
 }
 
 .card_text {
-  color: #ffffff;
+  color: black;
   font-size: 0.875rem;
   line-height: 1.5;
   margin-bottom: 1.25rem;
   font-weight: 400;
-}
-.made_by {
-  font-weight: 400;
-  font-size: 13px;
-  margin-top: 35px;
-  text-align: center;
 }
