--- a/src/Styles/Contact.css
+++ b/src/Styles/Contact.css
@@ -27,7 +27,16 @@
   margin-left: -2rem;
   color: #ffdf6c;
 }
-
+.contact-text {
+  font-size: 1.2rem;
+  margin-left: 6rem;
+}
+.contact-img {
+  box-sizing: border-box;
+}
+.contact-fluid {
+  width: 100%;
+}
 @media screen and (max-width: 376px) {
   .container-contact {
     display: flex;
@@ -43,6 +52,16 @@
   .txt-5 {
     font-size: 1.9rem;
     margin-left: -1.8rem;
+  }
+  .contact-text {
+    font-size: 0.9rem;
+    width: 8rem;
+    margin-left: 0rem;
+  }
+  .contact-fluid {
+    padding: 0rem 0rem;
+    height: auto;
+    width: 100%;
   }
 }
 @media screen and (min-width: 377px) and (max-width: 768px) {
@@ -62,6 +81,16 @@
     font-size: 2rem;
     margin-left: -1.6rem;
   }
+  .contact-text {
+    font-size: 1rem;
+    width: 8rem;
+    margin-left: 0rem;
+  }
+  .contact-fluid {
+    padding: 1rem 0rem;
+    height: 230px;
+    width: 100%;
+  }
 }
 @media screen and (min-width: 769px) and (max-width: 1068px) {
   .container-contact {
@@ -80,5 +109,16 @@
   .txt-5 {
     font-size: 2.5rem;
     margin-left: -1.6rem;
+  }
+  .contact-text {
+    font-size: 1rem;
+    margin-left: 0rem;
+  }
+
+  .contact-fluid {
+    margin-top: 50px;
+    margin-left: -110px;
+    width: 150%;
+    height: 300px;
   }
 }
