--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -54,7 +54,7 @@ a {
 }
 .input-toggler:checked ~ .menu-toggler .menu-toggler-line {
   top: 5px;
-  translatey: 100px;
+  transform: translateY(100px);
   transform: rotate(45deg);
 }
 
@@ -64,7 +64,7 @@ a {
 
 .input-toggler:checked ~ .menu-toggler .menu-toggler-line:nth-child(3) {
   top: -5px;
-  translatey: 10;
+  transform: translateY(10);
   transform: rotate(135deg);
 }
 
