--- a/src/Styles/Projects.css
+++ b/src/Styles/Projects.css
@@ -1,96 +1,113 @@
-.myprojects {
-  margin-left: 5rem;
-  margin-top: 3rem;
-  font-size: 1.3rem;
+.main {
+  padding: 5rem;
+  max-width: 1200px;
+  margin: 0 auto;
+  z-index: 10;
 }
-.cd-container {
-  display: flex;
-  justify-content: center;
-  flex-direction: row;
-  flex-wrap: wrap;
-  /* height: 1080px; */
-}
-.prj-1 {
-  margin-top: 4rem;
+
+h1 {
+  font-size: 3rem;
   font-weight: 300;
-}
-.prj-2 {
-  font-weight: 800;
-  padding: 0 0.5rem;
-  color: #ffdf6c;
-}
-.cd {
-  cursor: pointer;
-  margin-top: 0rem;
-  width: 100%;
-  flex: 0 0 18.333333%;
-  padding: 1rem;
-  background-color: white;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  transition: all 0.3s ease-out;
-}
-.cd:not(:first-child) {
-  /* margin-left: -40px; */
-}
-
-.cd:hover {
-  transform: translateY(-20px);
-  transition: 0.4s ease-out;
-}
-
-.cd:hover ~ .cd {
-  position: relative;
-  left: 50px;
-  transition: 0.4s ease-out;
-}
-.cd-title {
-  font-size: 1.2rem;
   text-align: center;
+}
+h1 .yellow {
+  padding-left: 1rem;
+  color: #ffdf6c;
   font-weight: 800;
-  padding-top: 1rem;
-  color: rgb(255, 223, 108);
+  font-size: 3rem;
 }
-.cd-desc {
+img {
+  height: auto;
+  max-width: 100%;
+  vertical-align: middle;
+}
+
+.btn {
+  color: black;
+  padding: 0.8rem;
+  font-size: 14px;
+  text-transform: uppercase;
+  border-radius: 4px;
   font-weight: 400;
-  font-size: 0.8rem;
+  display: block;
+  width: 100%;
+  cursor: pointer;
+  border: 1px solid rgba(61, 60, 60, 0.2);
+  background: transparent;
 }
-.img1 {
-  height: 200px;
-  background: url("https://images.pexels.com/photos/1476880/pexels-photo-1476880.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
-  border-radius: 8px 8px 0 0;
-  background-position: center;
-  background-size: cover;
+
+.btn:hover {
+  background-color: rgba(61, 60, 60, 0.2);
 }
-.img2 {
-  height: 200px;
-  background: url("https://images.pexels.com/photos/8647255/pexels-photo-8647255.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
-  border-radius: 8px 8px 0 0;
-  background-position: center;
-  background-size: cover;
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  margin: 0;
 }
-.img3 {
-  height: 200px;
-  background: url("https://images.pexels.com/photos/246328/pexels-photo-246328.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
-  border-radius: 8px 8px 0 0;
-  background-position: center;
-  background-size: cover;
+
+.cards_item {
+  display: flex;
+  padding: 1rem;
+  width: 33.3333%;
 }
+
 @media screen and (max-width: 768px) {
-  .cd-container {
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
+  .main {
+    margin-top: 2rem;
+    padding: 2rem;
+  }
+  .cards_item {
     width: 100%;
   }
-  .cd {
-    width: 70%;
-    padding: 1rem;
+  h1 {
+    font-size: 2rem;
   }
-  .myprojects {
-    margin-left: 5rem;
-    margin-top: 7rem;
-    font-size: 1.2rem;
-    flex: 0 0 20.333333%;
+  h1 .yellow {
+    padding-left: 1rem;
+    font-size: 2rem;
   }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1068px) {
+  .main {
+    padding: 5rem 2rem;
+  }
+  .cards_item {
+    margin-left: 2rem;
+    width: 43.5%;
+  }
+}
+
+.card {
+  background-color: white;
+  border-radius: 0.25rem;
+  box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
+  display: flex;
+  flex-direction: column;
+}
+
+.card_content {
+  height: 100%;
+  padding: 1rem;
+  background-color: #d9e4f5;
+  background-image: linear-gradient(315deg, #d9e4f5 0%, #f5e3e6 74%);
+}
+
+.card_title {
+  color: black;
+  font-size: 1.1rem;
+  font-weight: 700;
+  letter-spacing: 1px;
+  text-transform: capitalize;
+  margin: 0px;
+}
+
+.card_text {
+  color: black;
+  font-size: 0.875rem;
+  line-height: 1.5;
+  margin-bottom: 1.25rem;
+  font-weight: 400;
 }
