--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -5,6 +5,12 @@
   overflow: hidden;
   z-index: 50;
 } */
+* {
+  -ms-overflow-style: none;
+}
+::-webkit-scrollbar {
+  display: none;
+}
 legend,
 label,
 input,
