--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -128,6 +128,7 @@ body {
 }
 @media screen and (min-width: 769px) and (max-width: 1068px) {
   .container {
+    width: 100%;
     height: 85vh;
     display: flex;
     padding: 13rem 1.5rem;
@@ -147,12 +148,16 @@ body {
       width: 0;
     }
     to {
-      width: 7.2rem;
+      width: 7.4rem;
     }
+  }
+  .img-body {
+    height: 100vh;
+    width: 1000px;
   }
   .img-fluid {
     margin-left: 0px;
-    width: 600px;
+    width: 120rem;
     height: 30vh;
   }
 }
