--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -3,8 +3,8 @@ body {
   padding: 0;
   background: white;
 }
-.container {
-  height: 85vh;
+.container-home {
+  height: 70vh;
   display: flex;
   justify-content: space-between;
   padding: 7rem 3rem;
@@ -97,8 +97,74 @@ body {
   display: block;
   font-size: 1rem;
 }
+.waves {
+  position: relative;
+  width: 100%;
+  height: 10vh;
+  margin-bottom: -7px;
+  /*Fix for safari gap*/
+  min-height: 100px;
+  max-height: 400px;
+}
+/* Animation */
+.parallax > use {
+  animation: move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
+}
+.parallax > use:nth-child(1) {
+  animation-delay: -2s;
+  animation-duration: 7s;
+}
+.parallax > use:nth-child(2) {
+  animation-delay: -3s;
+  animation-duration: 10s;
+}
+.parallax > use:nth-child(3) {
+  animation-delay: -4s;
+  animation-duration: 13s;
+}
+.parallax > use:nth-child(4) {
+  animation-delay: -5s;
+  animation-duration: 20s;
+}
+@keyframes move-forever {
+  0% {
+    transform: translate3d(-90px, 0, 0);
+  }
+  100% {
+    transform: translate3d(85px, 0, 0);
+  }
+}
+/*Shrinking for mobile*/
+@media (max-width: 768px) {
+  .waves {
+    height: 40px;
+    min-height: 40px;
+  }
+  .content {
+    height: 30vh;
+  }
+}
+
+/*Other*/
+
+.unique-color-dark {
+  background-color: #7289da !important;
+}
+
+.bg-light {
+  background-color: #7289da !important;
+}
+
+.navbar-brand {
+  color: white;
+}
+
+.custom-color {
+  background-color: #7289da !important;
+}
 @media screen and (max-width: 768px) {
-  .container {
+  .container-home {
+    height: 75vh;
     display: flex;
     flex-direction: column;
     padding: 8rem 1.5rem;
@@ -127,7 +193,7 @@ body {
   }
 }
 @media screen and (min-width: 769px) and (max-width: 1068px) {
-  .container {
+  .container-home {
     width: 100%;
     height: 85vh;
     display: flex;
