--- a/src/Styles/Projects.css
+++ b/src/Styles/Projects.css
@@ -52,6 +52,17 @@ img {
   padding: 1rem;
   width: 33.3333%;
 }
+.footer-projects {
+  z-index: -3;
+  width: 100%;
+  margin-bottom: -20rem;
+  height: 3rem;
+  background-color: white;
+  color: black;
+  text-align: center;
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
 
 @media screen and (max-width: 768px) {
   .main {
