--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -14,9 +14,12 @@ body {
   overflow: hidden;
 }
 
-.img-fluid {
-  margin-left: 5rem;
-  width: 90%;
+.img-container {
+  position: absolute; /* This is the key */
+  height: 25rem;
+  margin-top: -2%;
+  margin-left: 70%;
+  width: 25rem;
 }
 .body-text {
   height: 100px;
@@ -27,7 +30,7 @@ body {
   color: #ffdf6c;
 }
 .about {
-  text-align: center;
+  width: 60%;
   font-size: 1.5rem;
 }
 
@@ -47,7 +50,6 @@ body {
   position: absolute;
   z-index: -3;
   width: 95%;
-  bottom: -rem;
   background-color: white;
   color: black;
   text-align: center;
@@ -68,14 +70,17 @@ body {
     font-size: 1.3rem;
   }
   .about {
+    width: 100%;
     font-size: 1rem;
   }
 
-  .img-fluid {
-    margin-left: 3rem;
-    margin-top: 10rem;
-    padding: 6rem 0rem;
-    height: 50vh;
+  .img-container {
+    position: absolute;
+    height: 20rem;
+    width: 20rem;
+    margin-top: 20rem;
+    margin-left: 2rem;
+    width: 80%;
   }
   .footer-home {
     bottom: -5rem;
@@ -86,9 +91,25 @@ body {
   }
 }
 
-@media screen and (min-width: 769px) and (max-width: 1068px) {
+@media screen and (max-width: 375px) {
+  .img-container {
+    margin-left: 3%;
+    margin-top: 80%;
+    padding: 6rem 0rem;
+    height: 70vh;
+    width: 90%;
+  }
+  .footer-home {
+    bottom: -20rem;
+    position: absolute;
+    z-index: -3;
+    width: 100%;
+    font-size: 1rem;
+  }
+}
+@media screen and (min-width: 769px) and (max-width: 1180px) {
   .container-home {
-    width: 75vh;
+    width: 100%;
     height: 92vh;
     display: flex;
     padding: 10rem 2rem;
@@ -100,14 +121,40 @@ body {
     font-size: 1.7rem;
   }
   .about {
+    width: 100%;
     font-size: 1.5rem;
   }
   .img-container {
-    margin-left: -120rem;
+    width: 50%;
+    margin-left: 25%;
+    margin-top: 45%;
+
+    height: 40vh;
   }
-  .img-fluid {
-    margin-top: 20rem;
-    padding: 6rem 0rem;
-    height: 50vh;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .container-home {
+    width: 100%;
+    height: 92vh;
+    display: flex;
+    padding: 10rem 2rem;
+  }
+  .greetings {
+    font-size: 1.5rem;
+  }
+  .name-text {
+    font-size: 1.7rem;
+  }
+  .about {
+    width: 100%;
+    font-size: 1.5rem;
+  }
+  .img-container {
+    width: 50%;
+    margin-left: 25%;
+    margin-top: 45%;
+
+    height: 40vh;
   }
 }
