--- a/src/Styles/Contact.css
+++ b/src/Styles/Contact.css
@@ -1,166 +1,59 @@
-.container-contact {
-  height: 50vh;
+.contact-container {
   display: flex;
   justify-content: space-between;
-  padding: 5rem 3rem;
-  box-sizing: border-box;
-  flex-direction: row;
+  align-items: center;
+  padding: 50px 80px;
 }
-.reachmeout {
-  padding: 2rem;
-  width: 100%;
-  box-sizing: border-box;
+
+.contact-info {
+  flex-basis: 60%;
+  padding-right: 50px;
 }
-.txt-3 {
-  font-size: 3rem;
-  font-weight: 300;
-}
-.txt-4 {
-  font-size: 3rem;
-  font-weight: 800;
-  padding: 0 1rem;
-  color: #ffdf6c;
-}
-.txt-5 {
-  font-size: 3rem;
-  font-weight: 800;
-  margin-left: -2rem;
-  color: #ffdf6c;
-}
-.contact-text {
+
+.paragraph-container {
   text-align: center;
-  font-size: 1.2rem;
-  margin-left: 0rem;
 }
-.contact-img {
-  box-sizing: border-box;
+.social-icons {
+  display: inline-block;
+  margin-top: 20px;
 }
-.contact-fluid {
-  width: 100%;
+
+.social-icons a {
+  margin-right: 10px;
 }
-@media screen and (max-width: 376px) {
-  .container-contact {
-    display: flex;
-    flex-direction: column;
-    padding: 2rem 0.5rem;
-  }
-  .txt-3 {
-    font-size: 1.9rem;
-  }
-  .txt-4 {
-    font-size: 1.9rem;
-  }
-  .txt-5 {
-    font-size: 1.9rem;
-    margin-left: -1.8rem;
-  }
-  .contact-text {
-    font-size: 0.9rem;
-    width: 8rem;
-    margin-left: 0rem;
-  }
-  .contact-fluid {
-    padding: 0rem 0rem;
-    height: auto;
-    width: 100%;
-  }
+
+.contact-image {
+  height: 25rem;
+  width: 25rem;
+  flex-basis: 30%;
 }
-@media screen and (min-width: 377px) and (max-width: 768px) {
-  .container-contact {
-    display: flex;
-    flex-direction: column;
-    padding: 5rem 0.5rem;
-  }
-  .txt-3 {
-    font-size: 2rem;
-  }
-  .txt-4 {
-    font-size: 2rem;
-    padding: 0 0.7rem;
-  }
-  .txt-5 {
-    font-size: 2rem;
-    margin-left: -1.6rem;
-  }
-  .contact-text {
+
+.footer {
+  text-align: center;
+  margin-top: 100px;
+}
+
+@media screen and (max-width: 768px) {
+  .contact-container {
     font-size: 1rem;
-    width: 100%;
-    margin-left: 0rem;
-  }
-  .contact-fluid {
-    padding: 1rem 0rem;
-    height: auto;
-    width: 100%;
-  }
-}
-@media screen and (min-width: 768px) and (max-width: 1068px) {
-  .container-contact {
-    display: flex;
-    padding: 10rem 1.5rem;
-  }
-  .reachmeout {
-    width: 50%;
-  }
-  .txt-3 {
-    font-size: 2.5rem;
-  }
-  .txt-4 {
-    font-size: 2.5rem;
-  }
-  .txt-5 {
-    font-size: 2.5rem;
-    margin-left: -1.6rem;
-  }
-  .contact-text {
-    font-size: 1.3rem;
-    margin-left: 0rem;
+    flex-direction: column;
+    padding: 50px 20px;
   }
 
-  .contact-fluid {
-    margin-top: 50px;
-    margin-left: 0px;
-    width: auto;
-    height: 450px;
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 819px) {
-  .container-contact {
-    margin-top: 0px;
-    align-items: center;
-    display: flex;
-    padding: 10rem 1.5rem;
-  }
-  .reachmeout {
-    width: 100%;
-  }
-  .txt-3 {
-    font-size: 3.5rem;
-  }
-  .txt-4 {
-    font-size: 3.5rem;
-  }
-  .txt-5 {
-    font-size: 3.5rem;
-    margin-left: -1.6rem;
-  }
-  .contact-text {
-    font-size: 1.7rem;
-    margin-left: 0rem;
+  .contact-info {
+    flex-basis: 100%;
+    padding-right: 0;
+    margin-bottom: 30px;
   }
 
-  .contact-fluid {
-    margin-top: 50px;
-    margin-left: 0px;
-    width: auto;
-    height: 450px;
+  .contact-image {
+    height: 23rem;
+    width: 23rem;
+    flex-basis: 100%;
+    margin-bottom: 30px;
   }
-}
-.socials {
-  position: absolute;
-  display: flex;
-  justify-content: space-between;
-  width: 20%;
-  margin-left: 20rem;
-  margin-top: 15rem;
+  .footer {
+    text-align: center;
+    margin-top: -50px;
+  }
 }
